apps/radarr/base/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  serviceName: radarr
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      volumes:
        - name: config
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/radarr/config"
            server: 10.10.20.10
        - name: persistent-data
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/plex/data"
            server: 10.10.20.10
        - name: ephemeral-data
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/ephemeral/plex/data"
            server: 10.10.20.10
        - name: qbittorrent-data
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/ephemeral/qbittorrent/data"
            server: 10.10.20.10
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.4.4.10685-ls319@sha256:7dfd049e79c00b16fbc29c3f5d96a9e7b9e73a23930b4c5b3c4541d60b366814
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          readinessProbe:
            httpGet:
              port: 7878
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 7878
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 7878
              name: web
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: persistent-data
              mountPath: /persistent-data
              readOnly: false
            - name: ephemeral-data
              mountPath: /ephemeral-data
              readOnly: false
            - name: qbittorrent-data
              mountPath: /downloads
              readOnly: false
