apps/radarr/base/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-https
spec:
  hostnames:
    - radarr.nahue.ar
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: nginx-fabric
      sectionName: radarr-https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: radarr
          port: 7878
          weight: 1
