apps/radarr/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - radarr.nahue.ar
      secretName: radarr
  rules:
    - host: radarr.nahue.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
